# kara-rust

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
bench/indirection_cost/: Cargo.toml  build.rs
bench/indirection_cost/src/: config_a.rs  config_b.rs  config_c.rs
docs/: deferred.md  demo_ideas.md  design.md  glossary.md  roadmap.md  syntax.md
runtime/: Cargo.toml  SYMBOL_KEEP_LIST.md
runtime/src/: clone.rs  event_loop.rs  lib.rs  map.rs
runtime/stdlib/: add.kara  bitand.kara  bitor.kara  bitxor.kara  cli.kara  div.kara  encoding.kara  entry.kara  eq.kara  hash.kara  http.kara  intrinsics.kara  io.kara  io_error.kara  json.kara  mul.kara  neg.kara  not.kara  option.kara  ord.kara  ordering.kara  peekable.kara  pool.kara  process.kara  regex.kara  rem.kara  shl.kara  shr.kara  stats.kara  sub.kara  var_error.kara  vec_deque.kara
src/: ast.rs  cfg.rs  cli.rs  codegen.rs  concurrency.rs  cost_summary.rs  doc.rs  edit_distance.rs  effectchecker.rs  exhaustive.rs  ffi_lint.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  lints.rs  logical_lint.rs  lowering.rs  missing_must_use_lint.rs  module.rs  must_use_lint.rs  ownership.rs  parser.rs  prelude.rs  repl.rs  resolver.rs  span_visitor.rs  token.rs  typechecker.rs  unsafe_lint.rs  use_classifier.rs
tests/: cli.rs  closures.rs  codegen.rs  concurrency.rs  effectchecker.rs  ffi_lint.rs  http_server.rs  interpreter.rs  json.rs  lexer.rs  logical_lint.rs  memory_sanitizer.rs  missing_must_use_lint.rs  module_graph.rs  must_use_lint.rs  ownership.rs  par_codegen.rs  parallax.rs  parallax_bench.rs  (+6 more)
(+151 files in other folders)
